# Kafka_microservice

./: .env  Dockerfile.dev  compose.yaml  create_topic.sh  pyproject.toml
microservice/: main.py  settings.py
