[tool.poetry]
name = "microservice"
version = "0.1.0"
description = ""
authors = ["kingpin147 <nomiking0072012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.4"
emails = "^0.6"
tenacity = "^8.4.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
fastapi-cors = "^0.0.6"
aiokafka = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
